--- a/Data.html
+++ b/Data.html
@@ -4,7 +4,7 @@
     <link href="../css/style.css" rel="stylesheet" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
-<body>
+<body class="Data">
 <div class="navigation">
     <a href="Processing.html" class="button">Processing</a>
     <a href="Systems.html" class="button">Systems</a>
@@ -18,8 +18,8 @@
 <div class="container" id="home">
     <div class="row text-center">
         <div class="col-md-12" >
-            <h1 class="head-main"> <i class="fa fa-desktop fa-2x"></i>A2 Computer Science Revision Pages</h1>
-            <h2 class="head-sub-main">Navigate to topics using the buttons at the top</h2>
+            <h1 class="head-main"> <i class="fa fa-desktop fa-2x"></i>DATA</h1>
+            <h2 class="head-sub-main">A Level Computer Science</h2>
         </div>
     </div>
 </div>
@@ -28,7 +28,7 @@
     <div class="container" >
         <div class="row text-center" >
             <div class="col-md-8 col-md-offset-2 ">
-                <h2 style="padding-top:50px;">Computer Misuse Act</h2>
+                <h2 style="padding-top:50px;">Floating Point Arithmetic</h2>
 
                 <a href="https://goo.gl/tyJh7I">
                     <img src="images/Computer_Misuse_Act.gif" alt="CMA">
@@ -59,7 +59,7 @@
 
         <div class="row text-center" >
             <div class="col-md-12">
-                <h2> Data Protection Act</h2>
+                <h2>Advanced Boolean Algebra</h2>
                 <p>
                 <h3>The data protection act was established in 1998. The eight principles are as follows:</h3>
                 <ul class="row text-left">
@@ -87,7 +87,7 @@
 
         <div class="row text-center" >
             <div class="col-md-8 col-md-offset-2 ">
-                <h2>RIPA</h2>
+                <h2>Boolean Applications</h2>
 
                 <h3>The Regulation of Investigatory Powers Act was passed in 2000.</h3>
                 The main purpose of this act is to provide restraints for security services
