--- a/Society.html
+++ b/Society.html
@@ -4,7 +4,7 @@
     <link href="../css/style.css" rel="stylesheet" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
-<body>
+<body class="Society">
 <div class="navigation">
     <a href="Processing.html" class="button">Processing</a>
     <a href="Systems.html" class="button">Systems</a>
@@ -18,8 +18,8 @@
 <div class="container" id="home">
     <div class="row text-center">
         <div class="col-md-12" >
-            <h1 class="head-main"> <i class="fa fa-desktop fa-2x"></i>A2 Computer Science Revision Pages</h1>
-            <h2 class="head-sub-main">Navigate to topics using the buttons at the top</h2>
+            <h1 class="head-main"> <i class="fa fa-desktop fa-2x"></i>SOCIETY</h1>
+            <h2 class="head-sub-main">A Level Computer Science</h2>
         </div>
     </div>
 </div>
@@ -54,6 +54,7 @@
         </div>
     </div>
 </section>
+
 <section class=" color-light"  >
     <div class="container" >
 
