--- a/Systems.html
+++ b/Systems.html
@@ -4,7 +4,7 @@
     <link href="../css/style.css" rel="stylesheet" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
-<body>
+<body class="Systems">
 <div class="navigation">
     <a href="Processing.html" class="button">Processing</a>
     <a href="Systems.html" class="button">Systems</a>
@@ -18,8 +18,8 @@
 <div class="container" id="home">
     <div class="row text-center">
         <div class="col-md-12" >
-            <h1 class="head-main"> <i class="fa fa-desktop fa-2x"></i>A2 Computer Science Revision Pages</h1>
-            <h2 class="head-sub-main">Navigate to topics using the buttons at the top</h2>
+            <h1 class="head-main"> <i class="fa fa-desktop fa-2x"></i>SYSTEMS</h1>
+            <h2 class="head-sub-main">A Level Computer Science</h2>
         </div>
     </div>
 </div>
@@ -28,15 +28,9 @@
     <div class="container" >
         <div class="row text-center" >
             <div class="col-md-8 col-md-offset-2 ">
-                <h2 style="padding-top:50px;">Computer Misuse Act</h2>
-
-                <a href="https://goo.gl/tyJh7I">
-                    <img src="images/Computer_Misuse_Act.gif" alt="CMA">
-                </a>
-                <p>
+                <h2 style="padding-top:50px;">Database Normalisation</h2>
                 <h3>The computer misuse act came into effect in 1990. It was designed to restrict unauthorised and malicious use of computer systems.
                     The act makes it illegal to carry out any of the following:</h3>
-                </p>
                 <ol class="row text-left" >
                     <li>Unauthorised access to computer material</li>
                     <li>Unauthorised access with intent to commit or facilitate a crime</li>
@@ -59,7 +53,7 @@
 
         <div class="row text-center" >
             <div class="col-md-12">
-                <h2> Data Protection Act</h2>
+                <h2>Database Transactions</h2>
                 <p>
                 <h3>The data protection act was established in 1998. The eight principles are as follows:</h3>
                 <ul class="row text-left">
@@ -78,40 +72,9 @@
                 The police force will need to know if new recruits have any previous criminal convictions.
                 </p>
             </div>
-
         </div>
     </div>
 </section>
-<section class="color-white " id="work-sec"  >
-    <div class="container" >
-
-        <div class="row text-center" >
-            <div class="col-md-8 col-md-offset-2 ">
-                <h2>RIPA</h2>
-
-                <h3>The Regulation of Investigatory Powers Act was passed in 2000.</h3>
-                The main purpose of this act is to provide restraints for security services
-                and the police when investigating and surveying digital data and communications of individuals.
-                The act also makes it a crime for anyone unauthorised by the act to carry out surveilance and monitoring of communicatons.
-                The European Court of Human Rights stated that UK surveillance laws were unclear and that there was nothing in place
-                to prevent abuses of power by organisations regarding the interception of electronic communications.
-                It was decided that UK surveillance laws and practice must be tighter in order to protect the individual's rights to privacy.
-                As a result, the act was passed.
-                <p>
-                <p> The idea behind allowing these organisations to intercept and monitor comunications is to achieve the following:
-                <ul class ="row text-left">
-                    <li>Prevent or detect crimes</li>
-                    <li>Prevent public disorder from occurring</li>
-                    <li>To ensure national security and the safety of the general public</li>
-                    <li>To investigate or detect any abnormal or illegal use of telecommunication systems.</li>
-                </ul>
-            </div>
-        </div>
-        <div class="row text-center g-pad-bottom" >
-            <div class="col-md-4">
-            </div>
-</section>
-</div>
-<h4 align="right">James McNicholas 2017</h4>
+<h4>James McNicholas 2017</h4>
 </body>
 </html>
