--- a/Connectivity.html
+++ b/Connectivity.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>Remy Macmillan-Parks
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <link type="text/css" href="css/style.css" rel="stylesheet" />
