Removed Society page

--- a/Connectivity.html
+++ b/Connectivity.html
@@ -13,7 +13,6 @@
     <a href="Data.html" class="button">Data</a>
     <a href="Computation.html" class="button">Computation</a>
     <a href="Connectivity.html" class="button">Connectivity</a>
-    <a href="Society.html" class="button">Society</a>
 </div>
 <div class="container" id="home">
     <div class="row text-center">
@@ -22,6 +21,7 @@
             <h2 class="head-sub-main">A Level Computer Science</h2>
         </div>
     </div>
+</div>
 </div>
 <section class="color-white " id="about"  >
     <div class="container" >
