Updated index page, removed redundant style sheet

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="../css/style.css" rel="stylesheet" />
+    <link type="text/css" href="css/style.css" rel="stylesheet" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 <body>
@@ -18,7 +18,7 @@
     <div class="row text-center">
         <div class="col-md-12" >
             <h1 class="head-main"> <i class="fa fa-desktop fa-2x"></i>A2 Computer Science Revision Pages</h1>
-            <h2 class="head-sub-main">Navigate to topics using the buttons at the top</h2>
+            <h2 class="head-sub-main">Navigate to topics using the buttons above</h2>
         </div>
     </div>
 </div>
@@ -27,28 +27,29 @@
     <div class="container" >
         <div class="row text-center" >
             <div class="col-md-8 col-md-offset-2 ">
-                <h2 style="padding-top:50px;">Computer Misuse Act</h2>
-
-                <a href="https://goo.gl/tyJh7I">
-                    <img src="images/Computer_Misuse_Act.gif" alt="CMA">
+                <h2 style="padding-top:50px;">About The Site</h2>
                 </a>
                 <p>
-                <h3>The computer misuse act came into effect in 1990. It was designed to restrict unauthorised and malicious use of computer systems.
-                    The act makes it illegal to carry out any of the following:</h3>
+                <h3>This set of webpages was created to help summarise content on the A2 Computer Science specification for OCR<p>
+                The content is split into topics which can be viewed via the navbar at the top. The sections are as follows:</h3>
                 </p>
-                <ol class="row text-left" >
-                    <li>Unauthorised access to computer material</li>
-                    <li>Unauthorised access with intent to commit or facilitate a crime</li>
-                    <li>Unauthorised modification of computer material</li>
-                    <li>Making, supplying or obtaining anything which can be used in computer misuse offences</li>
-                </ol>
+                <div class="container">
+                  <ul>
+                     <li>Processing -> GPUs, Pipelining, Parallel Processing</li>
+                     <li>Systems -> Database Normalisations and Transactions</li>
+                     <li>Programming -> OOP Fundamentals, Inheritance, Types of Languages, Recursion</li>
+                     <li>Development -> Stages of Compilation</li>
+                     <li>Data -> Floating Pint Arithmetic, Advanced Boolean Algebra, Boolean Applications</li>
+                     <li>Computation -> Trees and Graphs, Advanced Sorts, Path Finding, Algorithms and Efficiency, Computational Methods</li>
+                     <li>Connectivity -> Compression, Network Security, Encryption and Hashing, Web Technologies</li>
+                  </ul>
+                </div>
                 <p class="spacing-small">
                     The act works in tiers, so each act has more severe consequences than the last.
                     For example, <br> unauthorised modification of material has worse consequences than basic unauthorised access to data.<br>
                     Before 1990, there was no protection against data theft or modification, meaning there was nothing that could be done <br>  to punish cyber criminals.
                     This act helped to fight it by giving the means to prosecute those who comitted such acts. <br><br> Click the image above to learn more.
                 </p>
-
             </div>
         </div>
     </div>
@@ -61,8 +62,9 @@
                 <h2> Data Protection Act</h2>
                 <p>
                 <h3>The data protection act was established in 1998. The eight principles are as follows:</h3>
+                <div class="container">
                 <ul class="row text-left">
-                    <li>Personal data should be obtained and processed fairly amnd lawfully </li>
+                    <li>Personal data should be obtained and processed fairly and lawfully </li>
                     <li>Personal data can be held only for specified and lawful purposes </li>
                     <li>Personal data should be adequate, relevant and not excessive for the required purpose </li>
                     <li>Personal data should be accurate and kept up-to-date </li>
@@ -71,6 +73,7 @@
                     <li>Appropriate security measures must be taken against unauthorised access </li>
                     <li>Personal data cannot be transferred to countries outside the E. U. unless the country has similar legislation to the D.P.A. </li>
                 </ul>
+
                 The data protection act is designed to do as it states, ensure the safety of personal data. Each principle aims to keep secure data deemed personal.<br>
                 This includes racial or ethnic origin, political opinions and religious beliefs, among the obvious such as name and address. In some cases, collection<br>
                 of such material may be required, for example, a Catholic school who only employs Catholics, might wish to know the religious beliefs of new teachers, while<br>
