--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <a href="Data.html" class="button">Data</a>
     <a href="Computation.html" class="button">Computation</a>
     <a href="Connectivity.html" class="button">Connectivity</a>
+    <a href="index.html" class="button">Home</a>
 </div>
 <div class="container" id="home">
     <div class="row text-center">
@@ -45,10 +46,9 @@
                   </ul>
                 </div>
                 <p class="spacing-small">
-                    The act works in tiers, so each act has more severe consequences than the last.
-                    For example, <br> unauthorised modification of material has worse consequences than basic unauthorised access to data.<br>
-                    Before 1990, there was no protection against data theft or modification, meaning there was nothing that could be done <br>  to punish cyber criminals.
-                    This act helped to fight it by giving the means to prosecute those who comitted such acts. <br><br> Click the image above to learn more.
+                    Each page is split into subtopics, each of which contains the basic knowledge about that subject. These do not go
+                    into the full detail necessarily required for the exam, but should give you a basic idea of most of the concepts.
+                    From this you should be able to remind yourself and then progress or research further into areas you are unsure about.
                 </p>
             </div>
         </div>
@@ -73,7 +73,6 @@
                     <li>Appropriate security measures must be taken against unauthorised access </li>
                     <li>Personal data cannot be transferred to countries outside the E. U. unless the country has similar legislation to the D.P.A. </li>
                 </ul>
-
                 The data protection act is designed to do as it states, ensure the safety of personal data. Each principle aims to keep secure data deemed personal.<br>
                 This includes racial or ethnic origin, political opinions and religious beliefs, among the obvious such as name and address. In some cases, collection<br>
                 of such material may be required, for example, a Catholic school who only employs Catholics, might wish to know the religious beliefs of new teachers, while<br>
