--- a/Processing.html
+++ b/Processing.html
@@ -7,6 +7,7 @@
 </head>
 <body class="Processing">
 <div class="navigation">
+    <a href="index.html" class="button">Home</a>
     <a href="Processing.html" class="button">Processing</a>
     <a href="Systems.html" class="button">Systems</a>
     <a href="Programming.html" class="button">Programming</a>
