--- a/home.html
+++ b/home.html
@@ -1,26 +1,352 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link type="text/css" href="css/style.css" rel="stylesheet" />
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-
-    <nav class="navigation">
-      <a href="Processing.html" class="button">Home</a>
-      <a href="Systems.html" class="button">Projects</a>
-      <a href="Programming.html" class="button">Teamspeak</a>
-    </nav>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta charset="utf-8">
+<title>James McNicholas</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="">
+<meta name="author" content="">
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/font-awesome.min.css" rel="stylesheet">
+<link href="css/style1.css" rel="stylesheet">
+<link href="css/animate.css" rel="stylesheet">
+<link href="css/skin-blue.css" rel="stylesheet">
 </head>
-<body class="Home">
-  <div class="container" id="home">
-      <img src="Head-1.png" width=150px height=150px float:left>
-      <h3>Programming, Hosting and Technology enthusiast.</h3>
-  </div>
-  <div class="container" id="home">
-      <div class="row text-center">
-          <div class="col-md-12" >
-              <h1 class="head-main"> <i class="fa fa-desktop fa-2x"></i>JAMES MCNICHOLAS</h1>
-              <h2 class="head-sub-main">I have no idea what to put here</h2>
-          </div>
-      </div>
-  </div>
-  </div>
+<body data-spy="scroll" data-target=".navbar">
+<nav id="topnav" class="navbar navbar-fixed-top navbar-default" role="navigation">
+<div class="container">
+	<div class="navbar-header">
+		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+		<span class="sr-only">Toggle navigation</span>
+		<span class="icon-bar"></span>
+		<span class="icon-bar"></span>
+		<span class="icon-bar"></span>
+		</button>
+		<a class="navbar-brand" href="#top-section">James McNicholas</a>
+	</div>
+	<!-- Collect the nav links, forms, and other content for toggling -->
+	<div class="collapse navbar-collapse navbar-ex1-collapse">
+		<ul class="nav navbar-nav navbar-right">
+			<li class="active"><a href="#top-section">Home</a></li>
+			<li><a href="index.html">Revision Pages</a></li>
+			<li><a href="#Section-1">Teamspeak</a></li>
+			<li><a href="#Section-2">Hosting</a></li>
+			<li><a href="#Section-3">Programming</a></li>
+			<li><a href="#Section-6">Contact</a></li>
+		</ul>
+	</div>
+	<!-- /.navbar-collapse -->
+</div>
+</nav>
+<!-- HOMEPAGE -->
+<header id="top-section" class="fullbg">
+<div class="jumbotron">
+	<div id="carousel_intro" class="carousel slide fadeing">
+		<div class="carousel-inner">
+			<div class="active item" id="slide_1">
+				<div class="carousel-content">
+					<div class="animated fadeInDownBig">
+						 <h1>Programming, hosting and overall technology enthusiast.</h1>
+					</div>
+					<br/>
+					<a href="#" class="buttonyellow animated fadeInLeftBig"><i class="fa fa-shopping-cart"></i>&nbsp; Get Theme</a>
+					<a href="#" class="buttoncolor animated fadeInRightBig"><i class="fa fa-link"></i>&nbsp; Start Tour</a>
+
+				</div>
+			</div>
+			<div class="item" id="slide_2">
+				<div class="carousel-content">
+					<div class="animated fadeInDownBig">
+						 <h1>A project is complete when it starts working for you, rather than you working for it.</h1>
+					</div>
+					<br/>
+					<a href="#" class="buttoncolor animated fadeInRightBig"><i class="fa fa-link"></i>&nbsp; Learn More</a>
+
+				</div>
+			</div>
+			<div class="item" id="slide_3">
+				<div class="carousel-content">
+					<div class="animated fadeInDownBig">
+						 <h1>We help you serving a useful social purpose while generating high-quality profits.</h1>
+					</div>
+						<br/>
+						<a href="#" class="buttonyellow animated fadeInLeftBig"><i class="fa fa-download"></i>&nbsp; Download Now</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<button class="left carousel-control" href="#carousel_intro" data-slide="prev" data-start="opacity: 0.6; left: 0%;" data-250="opacity:0; left: 5%;"><i class="fa fa-chevron-left"></i></button>
+	<button class="right carousel-control" href="#carousel_intro" data-slide="next" data-start="opacity: 0.6; right: 0%;" data-250="opacity:0; right: 5%;"><i class="fa fa-chevron-right"></i></button>
+</div>
+<div class="inner-top-bg">
+</div>
+</header>
+<!-- / HOMEPAGE -->
+<!--  SECTION-1 -->
+<section id="Section-1" class="fullbg">
+<div class="section-divider">
+</div>
+<div class="container">
+<div class="row">
+	<div class="page-header text-center col-sm-12 col-lg-12 color-white animated fade">
+		<h1>Features</h1>
+		<p class="lead">
+			 Some stuff about product
+		</p>
+	</div>
+</div>
+<div class="row color-white">
+	<div class="col-md-12 animated fadeInUpNow">
+		<div class="boxservice">
+			<i class="fa fa-globe"></i>
+			<h3>Web Design</h3>
+			<p>
+				Web design encompasses many different skills and disciplines in the production and maintenance of websites.
+			</p>
+		</div>
+		<div class="boxservice">
+			<i class="fa fa-user"></i>
+			<h3>User Experience</h3>
+			<p>
+				The different areas of web design include web graphic design; interface design; authoring; user experience design; and seo.
+			</p>
+		</div>
+		<div class="boxservice rightb">
+			<i class="fa fa-dashboard"></i>
+			<h3>Client Side</h3>
+			<p>
+				The term web design is normally used to describe the design process relating to the front-end (client side) design of a website
+			</p>
+		</div>
+		<div class="boxservice bottomb">
+			<i class="fa fa-cloud-download"></i>
+			<h3>Themes & Templates</h3>
+			<p>
+				A web template system uses a template processor to combine web templates to form finished web pages.
+			</p>
+		</div>
+		<div class="boxservice bottomb">
+			<i class="fa fa-trophy"></i>
+			<h3>Publishing Tools</h3>
+			<p>
+				It is a web publishing tool present in content management systems, web application frameworks, and HTML editors.
+			</p>
+		</div>
+		<div class="boxservice rightb bottomb">
+			<i class="fa fa-microphone"></i>
+			<h3>Static & Dynamic</h3>
+			<p>
+				Web templates can be used like the template of a form letter to generate "static" web pages in advance or to produce.
+			</p>
+		</div>
+	</div>
+</div>
+<!-- end row -->
+</div>
+</section>
+<!-- SECTION-2(gallery) -->
+<section id="Section-2" class="fullbg color-white">
+<div class="section-divider">
+</div>
+<div class="container demo-3">
+<div class="row">
+	<div class="page-header text-center col-sm-12 col-lg-12 animated fade">
+		<h1>Gallery</h1>
+		<p class="lead">
+			 What customers say about our Product
+		</p>
+	</div>
+</div>
+<div class="row animated fadeInUpNow">
+	<div class="col-sm-12 col-lg-12">
+		<ul class="grid cs-style-4">
+			<li>
+			<figure>
+			<div>
+				<img src="http://unsplash.it/400/266?random=10" alt="premium-themes-templates">
+			</div>
+			<figcaption>
+			<h3>Safari</h3>
+			<span>Wow Themes</span>
+			<a href="#">Take a look</a>
+			</figcaption>
+			</figure>
+			</li>
+			<li>
+			<figure>
+			<div>
+				<img src="http://unsplash.it/400/266?random=11" alt="premium-themes-templates">
+			</div>
+			<figcaption>
+			<h3>Game Center</h3>
+			<span>Wow Themes</span>
+			<a href="#">Take a look</a>
+			</figcaption>
+			</figure>
+			</li>
+			<li>
+			<figure>
+			<div>
+				<img src="http://unsplash.it/400/266?random=12" alt="premium-themes-templates">
+			</div>
+			<figcaption>
+			<h3>Music</h3>
+			<span>Wow Themes</span>
+			<a href="#">Take a look</a>
+			</figcaption>
+			</figure>
+			</li>
+			<li>
+			<figure>
+			<div>
+				<img src="http://unsplash.it/400/266?random=13" alt="premium-themes-templates">
+			</div>
+			<figcaption>
+			<h3>Settings</h3>
+			<span>Wow Themes</span>
+			<a href="#">Take a look</a>
+			</figcaption>
+			</figure>
+			</li>
+			<li>
+			<figure>
+			<div>
+				<img src="http://unsplash.it/400/266?random=14" alt="premium-themes-templates">
+			</div>
+			<figcaption>
+			<h3>Camera</h3>
+			<span>Wow Themes</span>
+			<a href="#">Take a look</a>
+			</figcaption>
+			</figure>
+			</li>
+			<li>
+			<figure>
+			<div>
+				<img src="http://unsplash.it/400/266?random=15" alt="premium-themes-templates">
+			</div>
+			<figcaption>
+			<h3>Phone</h3>
+			<span>Wow Themes</span>
+			<a href="#">Take a look</a>
+			</figcaption>
+			</figure>
+			</li>
+		</ul>
+	</div>
+</div>
+</div>
+</section>
+<!-- SECTION-3(reviews) -->
+<section id="Section-3" class="fullbg color-white">
+<div class="section-divider">
+</div>
+<div class="container">
+<div class="row">
+	<div class="page-header text-center col-sm-12 col-lg-12 animated fade">
+		<h1>Reviews</h1>
+		<p class="lead">
+			 What customers say about our Product
+		</p>
+	</div>
+</div>
+<div class="row testimonials animated fadeInUpNow">
+	<div class="col-sm-12 col-lg-12">
+		<div class="arrow">
+		</div>
+		<div class="testimonials-slider">
+			<div class="slide">
+				<div class="testimonials-carousel-thumbnail">
+					<img width="120" alt="" src="assets/img/avatar.jpg">
+				</div>
+				<div class="testimonials-carousel-context">
+					<div class="testimonials-name">
+						 Bill Robinson <span>google.com</span>
+					</div>
+					<div class="testimonials-carousel-content">
+						<p>
+							 "Our party was a great success and the marquee was perfect for the occasion and so fortunately was the weather! Thank you to you and your team for erecting it so smoothly and professionally.
+						</p>
+						<p>
+							 Sed posuere consectetur est at lobortis. Fusce dapibus, tellus ac cursus commodo.Cras mattis consectetur purus sit amet fermentum. Sed posuere consectetur est at lobortis. Fusce dapibus, tellus ac cursus commodo."
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="slide">
+				<div class="testimonials-carousel-thumbnail">
+					<img width="120" alt="" src="assets/img/avatar.jpg">
+				</div>
+				<div class="testimonials-carousel-context">
+					<div class="testimonials-name">
+						 Michael Rocks <span>yahoo.com</span>
+					</div>
+					<div class="testimonials-carousel-content">
+						<p>
+							 "Cras mattis consectetur purus sit amet fermentum. Sed posuere consectetur est at lobortis. Fusce dapibus, tellus ac cursus commodo.
+						</p>
+					</div>
+					<p>
+						 Our party was a great success and the marquee was perfect for the occasion and so fortunately was the weather! Thank you to you and your team for erecting it so smoothly and professionally."
+					</p>
+				</div>
+			</div>
+			<div class="slide">
+				<div class="testimonials-carousel-thumbnail">
+					<img width="120" alt="" src="assets/img/avatar.jpg">
+				</div>
+				<div class="testimonials-carousel-context">
+					<div class="testimonials-name">
+						 Andrew Bilson <span>wowthemes.net</span>
+					</div>
+					<div class="testimonials-carousel-content">
+						<p>
+							 "It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal.
+						</p>
+					</div>
+					<p>
+						 Our party was a great success and the marquee was perfect for the occasion and so fortunately was the weather! Thank you to you and your team for erecting it so smoothly and professionally."
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+</div>
+</section>
+<!-- FOOTER -->
+<footer id="foot-sec">
+<div class="footerdivide">
+</div>
+<div class="container ">
+<div class="row">
+	<div class="text-center color-white col-sm-12 col-lg-12">
+		<ul class="social-icons">
+			<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+			<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+			<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+			<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+			<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+		</ul>
+		<p>
+			 ©jamesmc.me 2017
+		</p>
+</div>
+</div>
+</footer>
+
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="assets/js/jquery.min.js" type="text/javascript"></script>
+<script src="assets/js/bootstrap.js"></script>
+<script src="assets/js/jquery.parallax-1.1.3.js" type="text/javascript"></script>
+<script src="assets/js/jquery.localscroll-1.2.7-min.js" type="text/javascript"></script>
+<script src="assets/js/jquery.scrollTo-1.4.6-min.js" type="text/javascript"></script>
+<script src="assets/js/jquery.bxslider.min.js"></script>
+<script src="assets/js/jquery.placeholder.js"></script>
+<script src="assets/js/modernizr.custom.js"></script>
+<script src="assets/js/toucheffects.js"></script>
+<script src="assets/js/animations.js"></script>
+<script src="assets/js/init.js"></script>
+</body>
+</html>
