--- a/index.html
+++ b/index.html
@@ -59,58 +59,21 @@
 
         <div class="row text-center" >
             <div class="col-md-12">
-                <h2> Data Protection Act</h2>
+                <h2>About Me</h2>
                 <p>
-                <h3>The data protection act was established in 1998. The eight principles are as follows:</h3>
+                <h3>You can visit my main site using the button below</h3>
                 <div class="container">
-                <ul class="row text-left">
-                    <li>Personal data should be obtained and processed fairly and lawfully </li>
-                    <li>Personal data can be held only for specified and lawful purposes </li>
-                    <li>Personal data should be adequate, relevant and not excessive for the required purpose </li>
-                    <li>Personal data should be accurate and kept up-to-date </li>
-                    <li>Personal data should not be kept for longer than is necessary </li>
-                    <li>Data must be processed in accordance with the rights of the data subject </li>
-                    <li>Appropriate security measures must be taken against unauthorised access </li>
-                    <li>Personal data cannot be transferred to countries outside the E. U. unless the country has similar legislation to the D.P.A. </li>
-                </ul>
-                The data protection act is designed to do as it states, ensure the safety of personal data. Each principle aims to keep secure data deemed personal.<br>
-                This includes racial or ethnic origin, political opinions and religious beliefs, among the obvious such as name and address. In some cases, collection<br>
-                of such material may be required, for example, a Catholic school who only employs Catholics, might wish to know the religious beliefs of new teachers, while<br>
-                The police force will need to know if new recruits have any previous criminal convictions.
+                I'm an aspiring software engineer who's currently in full tiem education. This website is as much a resource for you
+                as it is for me. It is allowing me to Revise my own knowledge, through noting it down here after lessons and studying.
+                You can find out more about me by clicking below.
                 </p>
+                <div class="navigation">
+                  <a href="home.html" class="button">About me</a>
+                </div>
             </div>
 
         </div>
     </div>
-</section>
-<section class="color-white " id="work-sec"  >
-    <div class="container" >
-
-        <div class="row text-center" >
-            <div class="col-md-8 col-md-offset-2 ">
-                <h2>RIPA</h2>
-
-                <h3>The Regulation of Investigatory Powers Act was passed in 2000.</h3>
-                The main purpose of this act is to provide restraints for security services
-                and the police when investigating and surveying digital data and communications of individuals.
-                The act also makes it a crime for anyone unauthorised by the act to carry out surveilance and monitoring of communicatons.
-                The European Court of Human Rights stated that UK surveillance laws were unclear and that there was nothing in place
-                to prevent abuses of power by organisations regarding the interception of electronic communications.
-                It was decided that UK surveillance laws and practice must be tighter in order to protect the individual's rights to privacy.
-                As a result, the act was passed.
-                <p>
-                <p> The idea behind allowing these organisations to intercept and monitor comunications is to achieve the following:
-                <ul class ="row text-left">
-                    <li>Prevent or detect crimes</li>
-                    <li>Prevent public disorder from occurring</li>
-                    <li>To ensure national security and the safety of the general public</li>
-                    <li>To investigate or detect any abnormal or illegal use of telecommunication systems.</li>
-                </ul>
-            </div>
-        </div>
-        <div class="row text-center g-pad-bottom" >
-            <div class="col-md-4">
-            </div>
 </section>
 </div>
 <h4 align="right">James McNicholas 2017</h4>
