--- a/home.html
+++ b/home.html
@@ -33,7 +33,6 @@
 			<li><a href="#Section-1">Teamspeak</a></li>
 			<li><a href="#Section-2">Hosting</a></li>
 			<li><a href="#Section-3">Programming</a></li>
-			<li><a href="#Section-6">Contact</a></li>
 		</ul>
 	</div>
 	<!-- /.navbar-collapse -->
@@ -50,28 +49,28 @@
 						 <h1>Programming, hosting and overall technology enthusiast.</h1>
 					</div>
 					<br/>
-					<a href="#" class="buttonyellow animated fadeInLeftBig"><i class="fa fa-shopping-cart"></i>&nbsp; Get Theme</a>
-					<a href="#" class="buttoncolor animated fadeInRightBig"><i class="fa fa-link"></i>&nbsp; Start Tour</a>
+					<a href="#" class="buttoncolor animated fadeInLeftBig"><i class="fa fa-shopping-cart"></i>&nbsp; Other Site</a>
+					<a href="#" class="buttoncolor animated fadeInRightBig"><i class="fa fa-link"></i>&nbsp; Contact</a>
 
 				</div>
 			</div>
 			<div class="item" id="slide_2">
 				<div class="carousel-content">
 					<div class="animated fadeInDownBig">
-						 <h1>A project is complete when it starts working for you, rather than you working for it.</h1>
+						 <h1>Founder of Riptide, a group of people for whom i create.</h1>
 					</div>
 					<br/>
-					<a href="#" class="buttoncolor animated fadeInRightBig"><i class="fa fa-link"></i>&nbsp; Learn More</a>
+					<a href="#Section-2" class="buttoncolor animated fadeInRightBig"><i class="fa fa-link"></i>&nbsp; Learn More</a>
 
 				</div>
 			</div>
 			<div class="item" id="slide_3">
 				<div class="carousel-content">
 					<div class="animated fadeInDownBig">
-						 <h1>We help you serving a useful social purpose while generating high-quality profits.</h1>
+						 <h1>A professional amauter, trying to learn about the industry.</h1>
 					</div>
 						<br/>
-						<a href="#" class="buttonyellow animated fadeInLeftBig"><i class="fa fa-download"></i>&nbsp; Download Now</a>
+						<a href="#Section-3" class="buttonyellow animated fadeInLeftBig"><i class="fa fa-download"></i>&nbsp; Read More</a>
 				</div>
 			</div>
 		</div>
@@ -245,9 +244,9 @@
 <div class="container">
 <div class="row">
 	<div class="page-header text-center col-sm-12 col-lg-12 animated fade">
-		<h1>Reviews</h1>
+		<h1>Programming</h1>
 		<p class="lead">
-			 What customers say about our Product
+			 A few small examples of my work, stretching from Java and C# through to HTML and CSS
 		</p>
 	</div>
 </div>
@@ -258,55 +257,55 @@
 		<div class="testimonials-slider">
 			<div class="slide">
 				<div class="testimonials-carousel-thumbnail">
-					<img width="120" alt="" src="assets/img/avatar.jpg">
+					<img width="120" alt="" src="img/Head-1.png">
 				</div>
 				<div class="testimonials-carousel-context">
 					<div class="testimonials-name">
-						 Bill Robinson <span>google.com</span>
+						 Algorithm title <span>Java</span>
 					</div>
 					<div class="testimonials-carousel-content">
 						<p>
-							 "Our party was a great success and the marquee was perfect for the occasion and so fortunately was the weather! Thank you to you and your team for erecting it so smoothly and professionally.
+							 Enter text describing an algorithm
 						</p>
 						<p>
-							 Sed posuere consectetur est at lobortis. Fusce dapibus, tellus ac cursus commodo.Cras mattis consectetur purus sit amet fermentum. Sed posuere consectetur est at lobortis. Fusce dapibus, tellus ac cursus commodo."
+							 Algorithm of something here
 						</p>
 					</div>
 				</div>
 			</div>
 			<div class="slide">
 				<div class="testimonials-carousel-thumbnail">
-					<img width="120" alt="" src="assets/img/avatar.jpg">
+					<img width="400" height ="400" alt="" src="img/Head-1.png">
 				</div>
 				<div class="testimonials-carousel-context">
 					<div class="testimonials-name">
-						 Michael Rocks <span>yahoo.com</span>
+						 Algorithm Title <span>HTML/CSS</span>
 					</div>
 					<div class="testimonials-carousel-content">
 						<p>
-							 "Cras mattis consectetur purus sit amet fermentum. Sed posuere consectetur est at lobortis. Fusce dapibus, tellus ac cursus commodo.
+							 Talk about this website or Rev Pages
 						</p>
 					</div>
 					<p>
-						 Our party was a great success and the marquee was perfect for the occasion and so fortunately was the weather! Thank you to you and your team for erecting it so smoothly and professionally."
+						 More about something using HTML/CSS
 					</p>
 				</div>
 			</div>
 			<div class="slide">
 				<div class="testimonials-carousel-thumbnail">
-					<img width="120" alt="" src="assets/img/avatar.jpg">
+					<img width="120" alt="" src="img/Head-1.png">
 				</div>
 				<div class="testimonials-carousel-context">
 					<div class="testimonials-name">
-						 Andrew Bilson <span>wowthemes.net</span>
+						 Algorithm Title <span>C#</span>
 					</div>
 					<div class="testimonials-carousel-content">
 						<p>
-							 "It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal.
+							 Something in C# incase i ever get round to learning it
 						</p>
 					</div>
 					<p>
-						 Our party was a great success and the marquee was perfect for the occasion and so fortunately was the weather! Thank you to you and your team for erecting it so smoothly and professionally."
+						 Some C# Algorithm
 					</p>
 				</div>
 			</div>
@@ -337,16 +336,16 @@
 </footer>
 
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="assets/js/jquery.min.js" type="text/javascript"></script>
-<script src="assets/js/bootstrap.js"></script>
-<script src="assets/js/jquery.parallax-1.1.3.js" type="text/javascript"></script>
-<script src="assets/js/jquery.localscroll-1.2.7-min.js" type="text/javascript"></script>
-<script src="assets/js/jquery.scrollTo-1.4.6-min.js" type="text/javascript"></script>
-<script src="assets/js/jquery.bxslider.min.js"></script>
-<script src="assets/js/jquery.placeholder.js"></script>
-<script src="assets/js/modernizr.custom.js"></script>
-<script src="assets/js/toucheffects.js"></script>
-<script src="assets/js/animations.js"></script>
-<script src="assets/js/init.js"></script>
+<script src="js/jquery.min.js" type="text/javascript"></script>
+<script src="js/bootstrap.js"></script>
+<script src="js/jquery.parallax-1.1.3.js" type="text/javascript"></script>
+<script src="js/jquery.localscroll-1.2.7-min.js" type="text/javascript"></script>
+<script src="js/jquery.scrollTo-1.4.6-min.js" type="text/javascript"></script>
+<script src="js/jquery.bxslider.min.js"></script>
+<script src="js/jquery.placeholder.js"></script>
+<script src="js/modernizr.custom.js"></script>
+<script src="js/toucheffects.js"></script>
+<script src="js/animations.js"></script>
+<script src="js/init.js"></script>
 </body>
 </html>
