First commit from ubuntu

--- a/home.html
+++ b/home.html
@@ -106,35 +106,35 @@
 		</div>
 		<div class="boxservice">
 			<i class="fa fa-user"></i>
-			<h3>User Experience</h3>
+			<h3>Teamspeak Hosting</h3>
 			<p>
 				The different areas of web design include web graphic design; interface design; authoring; user experience design; and seo.
 			</p>
 		</div>
 		<div class="boxservice rightb">
 			<i class="fa fa-dashboard"></i>
-			<h3>Client Side</h3>
+			<h3>Community Management</h3>
 			<p>
 				The term web design is normally used to describe the design process relating to the front-end (client side) design of a website
 			</p>
 		</div>
 		<div class="boxservice bottomb">
 			<i class="fa fa-cloud-download"></i>
-			<h3>Themes & Templates</h3>
+			<h3>QA Testing</h3>
 			<p>
 				A web template system uses a template processor to combine web templates to form finished web pages.
 			</p>
 		</div>
 		<div class="boxservice bottomb">
 			<i class="fa fa-trophy"></i>
-			<h3>Publishing Tools</h3>
+			<h3>Programming</h3>
 			<p>
 				It is a web publishing tool present in content management systems, web application frameworks, and HTML editors.
 			</p>
 		</div>
 		<div class="boxservice rightb bottomb">
 			<i class="fa fa-microphone"></i>
-			<h3>Static & Dynamic</h3>
+			<h3>Server Hosting</h3>
 			<p>
 				Web templates can be used like the template of a form letter to generate "static" web pages in advance or to produce.
 			</p>
