--- a/home.html
+++ b/home.html
@@ -153,7 +153,7 @@
 	<div class="page-header text-center col-sm-12 col-lg-12 animated fade">
 		<h1>Gallery</h1>
 		<p class="lead">
-			 What customers say about our Product
+			 A few examples of stuff i've worked on
 		</p>
 	</div>
 </div>
