Updated sections of homepage

--- a/home.html
+++ b/home.html
@@ -24,15 +24,16 @@
 		<span class="icon-bar"></span>
 		</button>
 		<a class="navbar-brand" href="#top-section">James McNicholas</a>
+		<img src="img/Head-1.png" width="60px" height="60px">
 	</div>
 	<!-- Collect the nav links, forms, and other content for toggling -->
 	<div class="collapse navbar-collapse navbar-ex1-collapse">
 		<ul class="nav navbar-nav navbar-right">
 			<li class="active"><a href="#top-section">Home</a></li>
-			<li><a href="index.html">Revision Pages</a></li>
-			<li><a href="#Section-1">Teamspeak</a></li>
-			<li><a href="#Section-2">Hosting</a></li>
+			<li><a href="#Section-1">What I do</a></li>
+			<li><a href="#Section-2">Gallery</a></li>
 			<li><a href="#Section-3">Programming</a></li>
+			<li><a href="index.html">Revision Pages</a></li>
 		</ul>
 	</div>
 	<!-- /.navbar-collapse -->
@@ -57,7 +58,7 @@
 			<div class="item" id="slide_2">
 				<div class="carousel-content">
 					<div class="animated fadeInDownBig">
-						 <h1>Founder of Riptide, a group of people for whom i create.</h1>
+						 <h1>Founder of Riptide, a group of clients, friends and poeple i can create for</h1>
 					</div>
 					<br/>
 					<a href="#Section-2" class="buttoncolor animated fadeInRightBig"><i class="fa fa-link"></i>&nbsp; Learn More</a>
@@ -67,7 +68,7 @@
 			<div class="item" id="slide_3">
 				<div class="carousel-content">
 					<div class="animated fadeInDownBig">
-						 <h1>A professional amauter, trying to learn about the industry.</h1>
+						 <h1>A professional recruit, trying to get a foot in the door.</h1>
 					</div>
 						<br/>
 						<a href="#Section-3" class="buttonyellow animated fadeInLeftBig"><i class="fa fa-download"></i>&nbsp; Read More</a>
@@ -101,42 +102,42 @@
 			<i class="fa fa-globe"></i>
 			<h3>Web Design</h3>
 			<p>
-				Web design encompasses many different skills and disciplines in the production and maintenance of websites.
+				I've worked on a number of websites, with significant examples being this and my revision pages
 			</p>
 		</div>
 		<div class="boxservice">
-			<i class="fa fa-user"></i>
+			<i class="fa fa-microphone"></i>
 			<h3>Teamspeak Hosting</h3>
 			<p>
-				The different areas of web design include web graphic design; interface design; authoring; user experience design; and seo.
+				I have a lot of experience with hosting teamspeak, from client and its features, to the permission system.
 			</p>
 		</div>
 		<div class="boxservice rightb">
 			<i class="fa fa-dashboard"></i>
 			<h3>Community Management</h3>
 			<p>
-				The term web design is normally used to describe the design process relating to the front-end (client side) design of a website
+				For the last four years, i've dedocated a substantial amount of time to volunteering and managing an online community.
 			</p>
 		</div>
 		<div class="boxservice bottomb">
 			<i class="fa fa-cloud-download"></i>
 			<h3>QA Testing</h3>
 			<p>
-				A web template system uses a template processor to combine web templates to form finished web pages.
+				I also have moderate experience in a QA environment, having spent some time at Testology QA.
 			</p>
 		</div>
 		<div class="boxservice bottomb">
 			<i class="fa fa-trophy"></i>
 			<h3>Programming</h3>
 			<p>
-				It is a web publishing tool present in content management systems, web application frameworks, and HTML editors.
+				While this isn't necessarily my strongest suit, i'm eager to learn just how much you can create through many languages.
 			</p>
 		</div>
 		<div class="boxservice rightb bottomb">
-			<i class="fa fa-microphone"></i>
+			<i class="fa fa-dashboard"></i>
 			<h3>Server Hosting</h3>
 			<p>
-				Web templates can be used like the template of a form letter to generate "static" web pages in advance or to produce.
+				Not limited just to VOIP hosting, I have experience with lots of other types, including a majority of gameservers.
 			</p>
 		</div>
 	</div>
