Improvements to "What I do" grid, experimented with skins and fa icons

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 <link href="css/font-awesome.min.css" rel="stylesheet">
 <link href="css/style1.css" rel="stylesheet">
 <link href="css/animate.css" rel="stylesheet">
-<link href="css/skin-blue.css" rel="stylesheet">
+<link href="css/skin-tealblue.css" rel="stylesheet">
 </head>
 <body data-spy="scroll" data-target=".navbar">
 <nav id="topnav" class="navbar navbar-fixed-top navbar-default" role="navigation">
@@ -120,21 +120,21 @@
 			</p>
 		</div>
 		<div class="boxservice bottomb">
-			<i class="fa fa-cloud-download"></i>
+			<i class="fa fa-code-fork"></i>
 			<h3>QA Testing</h3>
 			<p>
 				I also have moderate experience in a QA environment, having spent some time at Testology QA.
 			</p>
 		</div>
 		<div class="boxservice bottomb">
-			<i class="fa fa-trophy"></i>
+			<i class="fa fa-github-square"></i>
 			<h3>Programming</h3>
 			<p>
 				While this isn't necessarily my strongest suit, i'm eager to learn just how much you can create through many languages.
 			</p>
 		</div>
 		<div class="boxservice rightb bottomb">
-			<i class="fa fa-dashboard"></i>
+			<i class="fa fa-power-off"></i>
 			<h3>Server Hosting</h3>
 			<p>
 				Not limited just to VOIP hosting, I have experience with lots of other types, including a majority of gameservers.
