Implemented fontawesome, added some temporary photos to gallery.

--- a/home.html
+++ b/home.html
@@ -50,8 +50,8 @@
 						 <h1>Programming, hosting and overall technology enthusiast.</h1>
 					</div>
 					<br/>
-					<a href="#" class="buttoncolor animated fadeInLeftBig"><i class="fa fa-shopping-cart"></i>&nbsp; Other Site</a>
-					<a href="#" class="buttoncolor animated fadeInRightBig"><i class="fa fa-link"></i>&nbsp; Contact</a>
+					<a href="#" class="buttoncolor animated fadeInLeftBig"><i class="fa fa-link"></i>&nbsp; Other Site</a>
+					<a href="#Section-3" class="buttoncolor animated fadeInRightBig"><i class="fa fa-envelope-o"></i>&nbsp; Contact</a>
 
 				</div>
 			</div>
@@ -61,14 +61,14 @@
 						 <h1>Founder of Riptide, a group of clients, friends and poeple i can create for</h1>
 					</div>
 					<br/>
-					<a href="#Section-2" class="buttoncolor animated fadeInRightBig"><i class="fa fa-link"></i>&nbsp; Learn More</a>
+					<a href="#Section-2" class="buttoncolor animated fadeInRightBig"><i class="fa fa-book"></i>&nbsp; Learn More</a>
 
 				</div>
 			</div>
 			<div class="item" id="slide_3">
 				<div class="carousel-content">
 					<div class="animated fadeInDownBig">
-						 <h1>A professional recruit, trying to get a foot in the door.</h1>
+						 <h1>A novice developer, with a passion to create.</h1>
 					</div>
 						<br/>
 						<a href="#Section-3" class="buttonyellow animated fadeInLeftBig"><i class="fa fa-download"></i>&nbsp; Read More</a>
@@ -113,28 +113,28 @@
 			</p>
 		</div>
 		<div class="boxservice rightb">
-			<i class="fa fa-dashboard"></i>
+			<i class="fa fa-users"></i>
 			<h3>Community Management</h3>
 			<p>
-				For the last four years, i've dedocated a substantial amount of time to volunteering and managing an online community.
+				For the last four years, i've dedocated a substantial amount of time to volunteering and managing several online communities.
 			</p>
 		</div>
 		<div class="boxservice bottomb">
-			<i class="fa fa-code-fork"></i>
+			<i class="fa fa-flask"></i>
 			<h3>QA Testing</h3>
 			<p>
-				I also have moderate experience in a QA environment, having spent some time at Testology QA.
+				I also have moderate experience in a QA environment, having spent some time at Testology QA using their methodologies
 			</p>
 		</div>
 		<div class="boxservice bottomb">
 			<i class="fa fa-github-square"></i>
 			<h3>Programming</h3>
 			<p>
-				While this isn't necessarily my strongest suit, i'm eager to learn just how much you can create through many languages.
+				I'm currently developing my OOP knowledge, and I'm eager to explore the endless possibilities of these languages.
 			</p>
 		</div>
 		<div class="boxservice rightb bottomb">
-			<i class="fa fa-power-off"></i>
+			<i class="fa fa-server"></i>
 			<h3>Server Hosting</h3>
 			<p>
 				Not limited just to VOIP hosting, I have experience with lots of other types, including a majority of gameservers.
@@ -164,11 +164,11 @@
 			<li>
 			<figure>
 			<div>
-				<img src="http://unsplash.it/400/266?random=10" alt="premium-themes-templates">
+				<img src="http://i.imgur.com/S4vqevd.png" alt="One of my teamspeak servers">
 			</div>
 			<figcaption>
-			<h3>Safari</h3>
-			<span>Wow Themes</span>
+			<h3>Teamspeak</h3>
+			<span>A server I host</span>
 			<a href="#">Take a look</a>
 			</figcaption>
 			</figure>
@@ -176,11 +176,11 @@
 			<li>
 			<figure>
 			<div>
-				<img src="http://unsplash.it/400/266?random=11" alt="premium-themes-templates">
+				<img src="http://i.imgur.com/skhw9fk.png" alt="Completion of the SoloLearn Java course">
 			</div>
 			<figcaption>
-			<h3>Game Center</h3>
-			<span>Wow Themes</span>
+			<h3>Sololearn</h3>
+			<span>Java tutorial course</span>
 			<a href="#">Take a look</a>
 			</figcaption>
 			</figure>
@@ -188,11 +188,11 @@
 			<li>
 			<figure>
 			<div>
-				<img src="http://unsplash.it/400/266?random=12" alt="premium-themes-templates">
+				<img src="http://i.imgur.com/Kl4iK0a.png" alt="HTML course">
 			</div>
 			<figcaption>
-			<h3>Music</h3>
-			<span>Wow Themes</span>
+			<h3>Sololearn</h3>
+			<span>HTML Course</span>
 			<a href="#">Take a look</a>
 			</figcaption>
 			</figure>
@@ -348,5 +348,6 @@
 <script src="js/toucheffects.js"></script>
 <script src="js/animations.js"></script>
 <script src="js/init.js"></script>
+<script src="https://use.fontawesome.com/a04959cf13.js"></script>
 </body>
 </html>
