--- a/home.html
+++ b/home.html
@@ -90,9 +90,9 @@
 <div class="container">
 <div class="row">
 	<div class="page-header text-center col-sm-12 col-lg-12 color-white animated fade">
-		<h1>Features</h1>
+		<h1>Who am I?</h1>
 		<p class="lead">
-			 Some stuff about product
+			 What exactly do I do?
 		</p>
 	</div>
 </div>
