Added a new temp teamspeak integration

--- a/home.html
+++ b/home.html
@@ -102,7 +102,7 @@
 			<i class="fa fa-globe"></i>
 			<h3>Web Design</h3>
 			<p>
-				I've worked on a number of websites, with significant examples being this and my revision pages
+				I've worked on front-end a number of websites, with significant examples being this and my revision pages
 			</p>
 		</div>
 		<div class="boxservice">
@@ -164,7 +164,7 @@
 			<li>
 			<figure>
 			<div>
-				<img src="http://i.imgur.com/S4vqevd.png" alt="One of my teamspeak servers">
+				<img src="http://i.imgur.com/vupyZy9.png" alt="One of my teamspeak servers">
 			</div>
 			<figcaption>
 			<h3>Teamspeak</h3>
@@ -200,11 +200,11 @@
 			<li>
 			<figure>
 			<div>
-				<img src="http://unsplash.it/400/266?random=13" alt="premium-themes-templates">
+				<img src="http://i.imgur.com/zgQBH2C.png" alt="Codecademy">
 			</div>
 			<figcaption>
-			<h3>Settings</h3>
-			<span>Wow Themes</span>
+			<h3>Java & CSS</h3>
+			<span>Completed codecademy courses</span>
 			<a href="#">Take a look</a>
 			</figcaption>
 			</figure>
@@ -224,7 +224,7 @@
 			<li>
 			<figure>
 			<div>
-				<img src="http://unsplash.it/400/266?random=15" alt="premium-themes-templates">
+
 			</div>
 			<figcaption>
 			<h3>Phone</h3>
@@ -236,6 +236,7 @@
 		</ul>
 	</div>
 </div>
+<span id="its882668"><a href="http://www.teamspeak3.com/">teamspeak server</a> Hosting by TeamSpeak3.com</span><script type="text/javascript" src="https://view.light-speed.com/teamspeak3.php?IP=138.68.136.196&PORT=9987&QUERY=10011&UID=882668&display=none&font=11px&background=transparent&server_info_background=%23424242&server_info_text=%23ffffff&server_name_background=transparent&server_name_text=%23ffffff&info_background=transparent&channel_background=transparent&channel_text=%23ffffff&username_background=transparent&username_text=%23ffffff"></script>
 </div>
 </section>
 <!-- SECTION-3(reviews) -->
@@ -323,14 +324,14 @@
 <div class="row">
 	<div class="text-center color-white col-sm-12 col-lg-12">
 		<ul class="social-icons">
-			<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+			<li><a href="#"><i class="fa fa-envelope-o"></i></a></li>
 			<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-			<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-			<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-			<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+			<li><a href="http://steamcommunity.com/id/jambosquidge"><i class="fa fa-steam"></i></a></li>
+			<li><a href="#"><i class="fa fa-github"></i></a></li>
+			<li><a href="#"><i class="fa fa-stack-overflow"></i></a></li>
 		</ul>
 		<p>
-			 ©jamesmc.me 2017
+			 ©Jamesmc.me 2017
 		</p>
 </div>
 </div>
