--- a/home.html
+++ b/home.html
@@ -142,10 +142,8 @@
 		</div>
 	</div>
 </div>
-<!-- end row -->
 </div>
 </section>
-<!-- SECTION-2(gallery) -->
 <section id="Section-2" class="fullbg color-white">
 <div class="section-divider">
 </div>
@@ -154,7 +152,7 @@
 	<div class="page-header text-center col-sm-12 col-lg-12 animated fade">
 		<h1>Gallery</h1>
 		<p class="lead">
-			 A few examples of stuff i've worked on
+			 A few examples of stuff i have worked on
 		</p>
 	</div>
 </div>
@@ -212,11 +210,11 @@
 			<li>
 			<figure>
 			<div>
-				<img src="http://unsplash.it/400/266?random=14" alt="premium-themes-templates">
+				<img src="Temp" alt="woo">
 			</div>
 			<figcaption>
 			<h3>Camera</h3>
-			<span>Wow Themes</span>
+			<span>Wow</span>
 			<a href="#">Take a look</a>
 			</figcaption>
 			</figure>
@@ -228,7 +226,7 @@
 			</div>
 			<figcaption>
 			<h3>Phone</h3>
-			<span>Wow Themes</span>
+			<span>Wow</span>
 			<a href="#">Take a look</a>
 			</figcaption>
 			</figure>
@@ -239,7 +237,6 @@
 <span id="its882668"><a href="http://www.teamspeak3.com/">teamspeak server</a> Hosting by TeamSpeak3.com</span><script type="text/javascript" src="https://view.light-speed.com/teamspeak3.php?IP=138.68.136.196&PORT=9987&QUERY=10011&UID=882668&display=none&font=11px&background=transparent&server_info_background=%23424242&server_info_text=%23ffffff&server_name_background=transparent&server_name_text=%23ffffff&info_background=transparent&channel_background=transparent&channel_text=%23ffffff&username_background=transparent&username_text=%23ffffff"></script>
 </div>
 </section>
-<!-- SECTION-3(reviews) -->
 <section id="Section-3" class="fullbg color-white">
 <div class="section-divider">
 </div>
@@ -270,7 +267,13 @@
 							 Enter text describing an algorithm
 						</p>
 						<p>
-							 Algorithm of something here
+							<pre class="prettyprint">
+public class Hi {
+	public static void main(String[] args){
+			System.out.println("Hi");
+	}
+}
+							</pre>
 						</p>
 					</div>
 				</div>
@@ -281,18 +284,31 @@
 				</div>
 				<div class="testimonials-carousel-context">
 					<div class="testimonials-name">
-						 Algorithm Title <span>HTML/CSS</span>
+						 Simple code box<span>CSS</span>
 					</div>
 					<div class="testimonials-carousel-content">
 						<p>
-							 Talk about this website or Rev Pages
+							Testamaroo
 						</p>
 					</div>
 					<p>
-						 More about something using HTML/CSS
+						<pre class=prettyprint>
+.code { background:#f5f8fa;
+	background-repeat:no-repeat;
+	border: solid #5C7B90;
+	border-width: 1px 1px 1px 20px;
+	color: #000000;
+	font: 13px 'Courier New', Courier, monospace;
+	line-height: 16px; margin: 10px 0 10px 10px;
+	max-height: 200px; min-height: 16px; overflow: auto;
+	padding: 10px 10px 10px;
+	width: 90%; }
+
+.code:hover {
+	background: #FAFAFA; background-repeat:no-repeat;}
+						</div>
 					</p>
 				</div>
-			</div>
 			<div class="slide">
 				<div class="testimonials-carousel-thumbnail">
 					<img width="120" alt="" src="img/Head-1.png">
@@ -307,7 +323,9 @@
 						</p>
 					</div>
 					<p>
+						<div class="code">
 						 Some C# Algorithm
+						</div>
 					</p>
 				</div>
 			</div>
@@ -350,5 +368,6 @@
 <script src="js/animations.js"></script>
 <script src="js/init.js"></script>
 <script src="https://use.fontawesome.com/a04959cf13.js"></script>
+<script src="https://rawgit.com/google/code-prettify/master/loader/run_prettify.js?autoload=true&amp;skin=desert&amp" defer=""></script>
 </body>
 </html>
