Loads of spelling and grammar stuff

--- a/home.html
+++ b/home.html
@@ -58,7 +58,7 @@
 			<div class="item" id="slide_2">
 				<div class="carousel-content">
 					<div class="animated fadeInDownBig">
-						 <h1>Founder of Riptide, a group of clients, friends and poeple i can create for</h1>
+						 <h1>Founder of Riptide, a group of clients, friends and people I can create for</h1>
 					</div>
 					<br/>
 					<a href="#Section-2" class="buttoncolor animated fadeInRightBig"><i class="fa fa-book"></i>&nbsp; Learn More</a>
@@ -102,21 +102,21 @@
 			<i class="fa fa-globe"></i>
 			<h3>Web Design</h3>
 			<p>
-				I've worked on front-end a number of websites, with significant examples being this and my revision pages
+				I've worked on the front-end for a number of websites, with significant examples being this and my revision pages
 			</p>
 		</div>
 		<div class="boxservice">
 			<i class="fa fa-microphone"></i>
 			<h3>Teamspeak Hosting</h3>
 			<p>
-				I have a lot of experience with hosting teamspeak, from client and its features, to the permission system.
+				I have a lot of experience with hosting teamspeak, from the client and its features, to the permission system.
 			</p>
 		</div>
 		<div class="boxservice rightb">
 			<i class="fa fa-users"></i>
 			<h3>Community Management</h3>
 			<p>
-				For the last four years, i've dedocated a substantial amount of time to volunteering and managing several online communities.
+				For the last four years, I've dedicated a substantial amount of time to volunteering and managing several online communities.
 			</p>
 		</div>
 		<div class="boxservice bottomb">
@@ -152,7 +152,7 @@
 	<div class="page-header text-center col-sm-12 col-lg-12 animated fade">
 		<h1>Gallery</h1>
 		<p class="lead">
-			 A few examples of stuff i have worked on
+			 A few examples of stuff I have worked on
 		</p>
 	</div>
 </div>
@@ -319,7 +319,7 @@ public class Hi {
 					</div>
 					<div class="testimonials-carousel-content">
 						<p>
-							 Something in C# incase i ever get round to learning it
+							 Something in C# incase I ever get round to learning it
 						</p>
 					</div>
 					<p>
